fix dark mode tables, page ref in md

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
 		--color-gray-20: #e0e0e0;
 		--color-gray-50: #C0C0C0;
 		--color-gray-90: #dad8d8;
+		--color-gray-mr: #495664;
 
 		/* --text-color is assigned to --color-gray-_ above */
 		--text-color-link: #1493fb;
